web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-func-expr-name/module-parent-not-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,28)
2|    const child = function await() {
 |                          ^
